@@ -1,4 +1,6 @@
 * As suggested by Toroic, when unlocking bending, the first ability will be automatically unlocked
+* Shields (air bubble/ice shield) protect from more types of damage, like explosion
+* Shields don't protect from potion/poison damage, this is intentional
 
 > Fix issues when killing entity already in ice prison
 > Fix water cannon always working
